# EnvironmentalEnvelopeProtection

./: README.md
Data/Config/: OutputQuantities_6_20230316_171833  Settings.sce
Data/Misc/: ModelCheck
Data/Road/: Circle_100m_morebumps.rd5  Circle_100m_my.rd5  Circle_100m_twoLines.rd5  Circle_Undarivable_obstacle.rd5  Circle_Undarivable_obstacle_rotated.rd5  Circle_Wider.rd5  Circle_priority_obstacle.rd5  Circle_priority_obstacle_withbox.rd5  Circle_priority_obstacle_withgirl.rd5  RutRoad.rd5
Data/TestRun/: A1 - drivable road - track  A2 - drivable road - ruts  B1 - drivable obstacle - 30 part 2  B2 - drivable obstacle - 30 part 1  B3 - drivable obstacle - 70 part 2  B4 - drivable obstacle - 70 part 1  Basic_experiment_at_30  Basic_experiment_at_50  Basic_experiment_at_70  C - undrivable obstacle  D1 - obstacle priority  D2 - obstacle priority without box  Obstacle_priority  Obstacle_priority_without_girl  Rut_road_experiment  Undrivable Obstacle
Data/Vehicle/: DemoCar  DemoCarForEE_basic  DemoCarForEE_rutroad  DemoCarForRuts  DemoForPriorityObstacle
EEP in C/: CMakeLists.txt  EEP.cpp  MPC_structure.cpp  Obstacle_structure.cpp  curve_params.csv  curves_ruts.csv  environmental_envelope_math_operations.cpp  mpc_input_DO30_p1.csv  mpc_input_DO30_p2.csv  mpc_input_DO70_p1.csv  mpc_input_DO70_p2.csv  mpc_input_LK.csv  mpc_input_OP1.csv  mpc_input_OP2.csv  mpc_input_Ruts.csv  mpc_input_UO.csv  obstacles_OP1.csv  obstacles_OP2.csv
src_cm4sl/: generic.slx  genericEE.slx  main_mpc.m  main_mpc_to_comp.m  main_mpc_undrivable_obstacle.m  mpc_for_rutroad.m  mpc_for_sign_priority.m
